environments/dev/patches/update-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: morphic-community
spec:
  tls:
    - hosts:
        - community.morphic.dev
      secretName: morphic-community-tls
  rules:
    - host: community.morphic.dev
      http:
        paths:
          - backend:
              serviceName: morphic-community
              servicePort: http
            path: /
